plang/testing/logs/false-incorrect/190/program190.p.p
r4 (fG) (En9m) :- lXt jpl.

cvxzC evQo (QL) (kY (FZ) zRpV (vxE9y)).


rkN bWKh (oh (cp5 (Mxg) OdN6P (C))) :- ((hkW (pz5 (uZLrD ubjSH FC (K7v) u) aa) (qf J (VIV)))).
zSY (l (HFkwi) yf (wGG vSV7i l)) :- (eTGE JF (sp (vV9y) (qiggi qo Q2T (bun (uY (LUil1) f v) hgjG7 (xp)) (gwoi3)))); n (On); hCewc (Hsh), (kk), c4dl (ptr15), m, ty46D; ms81 (F) (P2) u rV; s h N5Ne Zg6gK, cL (NTB) F sLH (O), gBF W uiM, z93l (b FVtV (T) rn23); ((sJDgg (yAPT) (eld6 (I) c w (ML00))); y (M)); yN A7AP.

w0A (RygT).
pLuGc thajI (chIx (t (H) e (c18) dw) MHc KFL) (cyCoh dv5 U (NtoQ) (fMt H)) :- ((n9r9 (KXz3) (Lt) (wS)), ml uVqn0 (A) pVfnf (G); snWA, (cSxiz (g (eJ (EL) EvW5M PpGCC) c5dG ETu) FV7k (aV2l (yWd NM0l ZuCl)))), (lWLk (ZauX)); (d y (dSE (RBEZY) jTp (N)) e3 Wzn; rL (i) Ex (Y4hG6)), e02CT yhuBT p ww221 (Wjv3w), enfV s uC4r (d C (waXB hhC Ynt (sd (e7UE) a) (casc (mqG (qHtYd (HQ) v0 eF) (DF) (C8zE) (HmJa)) I6)) (ktTi (qDu (lG) (e (G) (B4)) (s (cbAE p (IT1EA) (LnA)) EFw (X) YJ)) g6Bl xK LF)); tm, ut uEz4n k5x6; zldn, mNPM.

g (I) (eCh) (Q) (jei) :- o (m vBw (bAXf VPjX) (tp) (GQ)) (vr (ROkCg)).
qw6 M2d uFhWZ COwF4 (rZdgU (rGrF3 eVWY (rnwJC VLyOl Cnrv) sLo l) T8).

msa LMTuO (d CPW1 (IXp) (zp3ra)).

cwGxQ ZqLNa (TAO) (wHu20 (N9)).

mi (E7JDk) (i) :- (z (KXjsu) (xl JrBqo (DoBIr) o (GM)) lR (Qkln)).


dvQfU (zyRk (XN1D) (nZoH) PCX0O LY) :- (j CV th F r8zn).

r7Y.
uV (QzZ) (doAuk gu (m5h (hQy) (vh P7RP n)) (RDYu) (sQ5pO (Qdp) (mB SSn (T)) (p Bd lSJJ))).

n (fpie wEI tiP tp) (aGS l (QB) lBU (b R (dtMa (Ypt) (CL)) j)) cfXAY :- (u6x), (((i1JLQ Ji3R4 (mTEO) hDR (W7RXH); u3))).


ky ur fRu S Bko.

? ovN pl (CS4R); sT32; vT, p K, n hGq (yf f3k vg (Acnx) a) (rrRIZ Aw (S7iTW)), na8T hH (Xfo); qxbm7, r1lq2 jkDL, y9T2 (li Ijt2 EWs); i (bJF (Hw) (VeZ) (o GhgK (Crg))) (w Bj (H58e)) c; bqe4 vN FiU (g (w7e l27g MkiXb (Z)) (dZ4a (I) (qbE (EE)) ykv) KEQ).


